third draft. structure mostly fixed except from text wrapping under images. need to improve flexbox understanding.

--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body {
   min-height: 100vh;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
 .header {
   height: 52px;
   background: #1f2937;
@@ -35,6 +40,9 @@ h1 {
 }
 
 .firstpaneltext {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  padding-right: 10px;
   text-align: left;
   flex-direction: column;
 }
@@ -42,8 +50,6 @@ h1 {
 img {
   display: flex;
   justify-content: center;
-  width: 600px;
-  height: 400px;
 }
 
 .logo {
@@ -62,22 +68,14 @@ ul {
 
 li {
   margin-bottom: 16px;
+  display: flex;
+  flex-direction: column;
 }
 
 .subtext {
   filter: contrast(70%);
   font-weight: 400;
   font-size: 17px;
-}
-
-.info {
-  font-weight: 800;
-  color: #1f2937;
-  font-size: 36px;
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  justify-content: center;
 }
 
 .footer {
@@ -96,19 +94,49 @@ li {
 }
 
 .supplementary {
-  margin: 122px;
+  align-items: center;
+}
+
+.info {
+  font-weight: 800;
+  color: #1f2937;
+  font-size: 36px;
+  filter: contrast(80%);
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  flex-wrap: wrap;
   flex: 1;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 2rem;
+}
+
+.information {
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 1rem;
+  padding-bottom: 8rem;
+  text-align: -webkit-match-parent;
+}
+
+.infoimage {
+  width: 250px;
+  height: 250px;
+  object-fit: contain;
+  border: 4px solid #3882f6;
+  border-radius: 15px;
+  margin: 5px 20px 0px 20px;
+}
+
+.infoblock p {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .square {
-  border: 6px solid #3882f6;
-  width: 120px;
-  height: 90px;
+  border: 4px solid #3882f6;
+  width: 160px;
+  height: 160px;
   border-radius: 8px;
   display: flex;
   justify-content: center;
